2008-07-22  Sam Steingold  <sds@gnu.org>

	* utils/clispload.lsp (*expected-failures*): drop tests that we pass

2008-07-21  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (get_font_info_and_display): prefix
	*CANONICALIZE-ENCODING* with XLIB:: for bootstrap when is has not
	been exported yet

2008-07-21  Sam Steingold  <sds@gnu.org>

	the sets of declaration and type names are disjoint, as per ANSI
	(see http://www.lisp.org/HyperSpec/Body/dec_type.html)
	* condition.lisp (check-not-type, check-not-declaration): define
	(define-condition): use CHECK-NOT-DECLARATION
	* clos-class3.lisp (defclass): use CHECK-NOT-DECLARATION
	* compiler.lisp (c-PROCLAIM): use CHECK-NOT-TYPE
	* constsym.d (check_not_type): declare
	* control.d (PROCLAIM): use CHECK-NOT-TYPE for DECLARATION
	* defstruct.lisp (defstruct): use CHECK-NOT-DECLARATION
	* init.lisp (check-not-declaration): predefine
	* macros2.lisp (deftype): use CHECK-NOT-DECLARATION
	* utils/clispload.lsp (*expected-failures*): remove
	DECLARATION.([4-9]|1[01]) (i.e. tests 4..11 now pass)

2008-07-21  Bruno Haible  <bruno@clisp.org>

	* makemake.in (LIBS): Remove special code for Solaris 2.1.

2008-07-21  Sam Steingold  <sds@gnu.org>

	fix "-x ... -repl", broken since 2008-01-06
	* reploop.lisp (main-loop): accept an optional exit argument
	* spvw.d (main_actions): pass !p->argv_repl to MAIN-LOOP
	* makemake.in (check-script): test "-x ... -repl"

2008-07-21  Sam Steingold  <sds@gnu.org>

	* makemake.in (ANSI_CLISP): add "-p CL-TEST"
	(check-ansi-tests, check-ansi-tests-debug, check-ansi-tests-compiled)
	(check-ansi-tests-compiled-debug): remove IN-PACKAGE from -x

2008-07-21  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2022362 ]: Problem :external-format :dos and (setf
	stream-element-type): after a ((setf stream-element-type)
	'(unsigned-byte 8)) after read-line on a :dos stream
	an NL byte (10) is read from the stream
	* stream.d (rd_by_iau8_unbuffered, rd_by_array_iau8_unbuffered)